--- a/public_html/css/style.css
+++ b/public_html/css/style.css
@@ -32,7 +32,10 @@ RESPONSIVE
 /*=========================================================
 	GENERAL
 ===========================================================*/
-
+.center_div{
+  margin: 0 auto;
+  width:100% /* value of your choice which suits your alignment */
+}
 /*----------------------------*\
 	typography
 \*----------------------------*/
@@ -950,8 +953,10 @@ textarea.input {
   .imagem-logo{
 
     width: 100%;
+  }
 
-
+  #form_cpf{
+    
   }
 }
 
